--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,18 +4,18 @@
    <welcome-file>default.html</welcome-file>  
   </welcome-file-list> 
   
-  
+ <!-- 
   	<servlet>
-    	<servlet-name>Login</servlet-name>
-    	<servlet-class>webapp.servlets.LoginServlet</servlet-class>
+    	<servlet-name>LoginServlet2</servlet-name>
+    	<servlet-class>webapp.servlets.LoginServlet2</servlet-class>
     	<load-on-startup>0</load-on-startup>  
   	</servlet>
 
 
   	<servlet-mapping>
-    	<servlet-name>Login</servlet-name>
-    	<url-pattern>/Login</url-pattern>
+    	<servlet-name>LoginServlet2</servlet-name>
+    	<url-pattern>/LoginServlet2</url-pattern>
   	</servlet-mapping>
-  	
+-->
   	 
 </web-app>  
