--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
     </properties>
 
     <dependencies>
+  		<dependency>
+	        <groupId>com.google.code.gson</groupId>
+	        <artifactId>gson</artifactId>
+	        <version>2.2.2</version>
+	        <scope>compile</scope>
+    	</dependency>
 		<dependency>  
 		    <groupId>com.googlecode.json-simple</groupId>  
 		    <artifactId>json-simple</artifactId>  
