--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,14 @@
     </properties>
 
     <dependencies>
-  		<dependency>
-	        <groupId>com.google.code.gson</groupId>
-	        <artifactId>gson</artifactId>
-	        <version>2.2.2</version>
-	        <scope>compile</scope>
-    	</dependency>
+
+    <!--  Gson: Java to Json conversion -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+
 		<dependency>  
 		    <groupId>com.googlecode.json-simple</groupId>  
 		    <artifactId>json-simple</artifactId>  
