--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring.version>5.1.0.RELEASE</spring.version>
+        <version.commons-io>2.4</version.commons-io>
     </properties>
 
     <dependencies>
@@ -81,11 +82,33 @@
             <version>1.2</version>
             <scope>provided</scope>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
+		<dependency>
+		    <groupId>commons-dbcp</groupId>
+		    <artifactId>commons-dbcp</artifactId>
+		    <version>1.2.2</version>
+		</dependency>
+        
 
     </dependencies>
     <build>
         <finalName>final-project</finalName>
         <plugins>
+         	<plugin>
+            	<artifactId>maven-compiler-plugin</artifactId>
+            	<version>3.5.1</version>
+            	<configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        	</plugin>
+        	
+        	<plugin>
+     			<groupId>org.apache.tomcat.maven</groupId>
+      			<artifactId>tomcat7-maven-plugin</artifactId>
+      			<version>2.2</version>
+        	</plugin>
             <!-- http://www.eclipse.org/jetty/documentation/current/jetty-maven-plugin.html -->
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
