--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,6 @@
   <env-entry>
   	<env-entry-name>DB-NAME</env-entry-name>
     <env-entry-type>java.lang.String</env-entry-type>
-    <env-entry-value>C://final_project//ClientsDB</env-entry-value> 
+    <env-entry-value>final_project//ClientsDB</env-entry-value> 
   </env-entry>
 </web-app>  
