--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,6 @@
 	<env-entry>
   		<env-entry-name>DB-PATH</env-entry-name>
     	<env-entry-type>java.lang.String</env-entry-type>
-    	<env-entry-value>C://final_project//</env-entry-value> 
+    	<env-entry-value>C:/final_project/</env-entry-value> 
   </env-entry>
 </web-app>  
