--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,16 @@
         <spring.version>5.1.0.RELEASE</spring.version>
         <version.commons-io>2.4</version.commons-io>
     </properties>
+    
+    
 
     <dependencies>
+    
+	    <!-- dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0</version>
+	    </dependency -->
 
     <!--  Gson: Java to Json conversion -->
 		<dependency>
