--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,41 @@
 
     <dependencies>
     
-	    <!-- dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>11.2.0</version>
-	    </dependency -->
+    <!-- https://mvnrepository.com/artifact/org.glassfish/javax.json -->
+	<dependency>
+	    <groupId>org.glassfish</groupId>
+	    <artifactId>javax.json</artifactId>
+	    <version>1.1.4</version>
+	</dependency>
+    
+    
+    <!-- https://mvnrepository.com/artifact/javax.enterprise/cdi-api -->
+	<dependency>
+	    <groupId>javax.enterprise</groupId>
+	    <artifactId>cdi-api</artifactId>
+	    <version>2.0.SP1</version>
+	    <scope>provided</scope>
+	</dependency>
+    
+    <!-- https://mvnrepository.com/artifact/javax.json/javax.json-api -->
+	<dependency>
+	    <groupId>javax.json</groupId>
+	    <artifactId>javax.json-api</artifactId>
+	    <version>1.1.4</version>
+	</dependency>
+    
+    <!-- https://mvnrepository.com/artifact/javax.inject/javax.inject -->
+	<dependency>
+	    <groupId>javax.inject</groupId>
+	    <artifactId>javax.inject</artifactId>
+	    <version>1</version>
+	</dependency>
+    
+	<dependency>
+	   <groupId>javax.websocket</groupId>
+	   <artifactId>javax.websocket-api</artifactId>
+	   <version>1.0</version>
+	</dependency>
 
     <!--  Gson: Java to Json conversion -->
 		<dependency>
