--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 
     <dependencies>
     
+    <dependency>
+    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.8.0</version>
+	</dependency>
+    
     <!-- https://mvnrepository.com/artifact/org.glassfish/javax.json -->
 	<dependency>
 	    <groupId>org.glassfish</groupId>
