--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
 
     <dependencies>
     
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20210307</version>
+	</dependency>
+    
     <dependency>
     <groupId>commons-io</groupId>
 	    <artifactId>commons-io</artifactId>
