--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
 
     <dependencies>
     
+    <!-- https://search.maven.org/artifact/org.apache.commons/commons-lang3/3.12.0/jar -->
+    <dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+		<version>3.12.0</version>
+	</dependency>
+    
     <!-- https://mvnrepository.com/artifact/org.json/json -->
 	<dependency>
 	    <groupId>org.json</groupId>
@@ -172,6 +179,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
+                <configuration>
+		          	<additionalClasspathElements>
+		            	<additionalClasspathElement>/final_project/src/main/java/database/DerbyExtensions</additionalClasspathElement>
+	            		<!-- additionalClasspathElement>path/to/additional/jar</additionalClasspathElement -->
+		          	</additionalClasspathElements>
+		        </configuration>
             </plugin>
 
             <!-- Default 2.2 is too old, update to latest -->
